# vulkan-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt
bench/: CMakeLists.txt
bench/src/: AppFixture.h
gpu/: CMakeLists.txt
gpu/src/gpu/: Queue.cpp  Queue.fwd.h  Queue.h  Runtime.cpp  Runtime.fwd.h  Runtime.h  gpu.h
gpu/src/gpu/buffer/: Buffer.cpp  Buffer.h
gpu/src/gpu/cmd/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.fwd.h  CommandPool.h  cmd.h
gpu/src/gpu/compute/: ComputePipeline.fwd.h  ComputePipeline.h
gpu/src/gpu/descriptors/: DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.fwd.h  DescriptorSet.h  DescriptorSetLayout.h
gpu/src/gpu/ext/: debug_utils.cpp  debug_utils.h
gpu/src/gpu/memory/: DeviceMemoryResource.cpp  DeviceMemoryResource.h  MonotonicResource.h  PolymorphicAllocator.h  Ptr.h  Resource.h  memory.h
gpu/src/gpu/pipeline/: Pipeline.h  PipelineDescriptors.h  PipelineLayout.fwd.h  PipelineLayout.h
gpu/src/gpu/sync/: Fence.cpp  Fence.h  Semaphore.cpp  Semaphore.h
gpu/src/gpu/time/: Timer.cpp  Timer.h
io/: CMakeLists.txt
io/src/: io.cpp  io.h
logging/: CMakeLists.txt
logging/src/: logging.cpp  logging.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
shaders/: a.spv  abc.comp  basic.cs.glsl  decoupled_look_back_prefix_sum.cs.glsl  parallel_decoupled_look_back_prefix_sum.cs.glsl  portable.glsl  rtx4070_prefix_sum.glsl  subgroup_prefix_sum.cs.glsl
spirv/: CMakeLists.txt
spirv/src/spirv/: compile.cpp  compile.h  reflect.cpp  reflect.h
src/: DecoupledLookBackPrefixSum.cpp  DecoupledLookBackPrefixSum.h  SubgroupPrefixSum.cpp  SubgroupPrefixSum.h  TrivialApp.cpp  TrivialApp.h
src/dep/alloc/: colorful.h  counting_resource.h  main.cpp  page_allocator.h  wrs.h
src/dep/alloc/glfw/: window.cpp  window.h
